# gpubuggybenchmark

./: .gitignore  README.md
analysis/: basePlots.py  cdf-distance.ipynb  combinedPlots.py  dataLoader.py  experiment_nb1.ipynb  experiments-31-10-2025.ipynb  experiments-october.ipynb  first_comparison.ipynb  new_architecture.ipynb  stabilityUtils.py
original_kernel/accuracy/accuracy-hip/: main
scripts/: custom-hipify.py  experiment_nb1.ipynb  experiments-31-10-2025.ipynb  experiments-october.ipynb  first_comparison.ipynb  new-version.py  requirements.txt  stability-criterion.ipynb  stabilityUtils.py
src/: CMakeLists.txt  README.md  main.cpp
src/acc/: CMakeLists.txt  acc-reference.cu  acc-reference.hip  acc-reference.hpp  accuracy.cpp  accuracy.hpp
src/acc/flawed/: acc-bc.cu  acc-bc.hip  acc-cf.cu  acc-cf.hip  acc-cl.cu  acc-cl.hip  acc-dr.cu  acc-dr.hip  acc-mc.cu  acc-mc.hip  acc-ml.cu  acc-ml.hip  acc-mo.cu  acc-mo.hip  acc-rc.cu  acc-rc.hip  acc-uo.cu  acc-uo.hip
src/acc/flawed/hip/: acc-bc.hip  acc-cl.hip  acc-dr.hip  acc-mc.hip  acc-ml.hip  acc-mo.hip  acc-rc.hip  acc-uo.hip
src/acc/flawed/include/: acc-bc.hpp  acc-cf.hpp  acc-cl.hpp  acc-dl.hpp  acc-dr.hpp  acc-ma.hpp  acc-mc.hpp  acc-ml.hpp  acc-mo.hpp  acc-mz.hpp  acc-rc.hpp  acc-uo.hpp
src/accuracy/: CMakeLists.txt  acc-reference.cu  acc-reference.hip  acc-reference.hpp  accuracy.cpp  accuracy.hpp
src/bilateral/: CMakeLists.txt  bilateral-reference.cu  bilateral-reference.hip  bilateral-reference.hpp  bilateral.cpp  bilateral.hpp
src/bilateral/flawed/: bilateral-ab.cu  bilateral-cl.cu  bilateral-co.cu  bilateral-cs.cu  bilateral-dg.cu  bilateral-il.cu  bilateral-lu.cu  bilateral-re.cu  bilateral-ua.cu
src/bilateral/flawed/hip/: bilateral-ab.hip  bilateral-cl.hip  bilateral-co.hip  bilateral-cs.hip  bilateral-dg.hip  bilateral-il.hip  bilateral-lu.hip  bilateral-re.hip  bilateral-ua.hip
src/bilateral/flawed/include/: bilateral-ab.hpp  bilateral-cl.hpp  bilateral-co.hpp  bilateral-cs.hpp  bilateral-dg.hpp  bilateral-il.hpp  bilateral-lu.hpp  bilateral-re.hpp  bilateral-ua.hpp
src/cuda_common/: CMakeLists.txt  blocking_kernel.cu  cuda-utils.cu  cuda-utils.hpp  cuda_profiling.hpp
src/fpc/: CMakeLists.txt  fpc-cpu.cpp  fpc-reference-metal.cpp  fpc-reference.cu  fpc-reference.hip  fpc-reference.hpp  fpc-reference.metal  fpc.cpp  fpc.hpp  fpc2-reference.cu  fpc2-reference.hip
src/fpc/flawed/: flawed.hpp  fpc-cf.cu  fpc-cs.cu  fpc-dg.cu  fpc-ml.cu  fpc-ml.hip  fpc-ml.hpp  fpc-rc.cu  fpc-rc.hip  fpc-rc.hpp
src/fpc/flawed/hip/: fpc-cf.hip  fpc-cs.hip  fpc-dg.hip
src/fpc/flawed/include/: fpc-cf.hpp  fpc-cs.hpp  fpc-dg.hpp
src/fpdc/: LICENSE  fpc-reference.hpp  fpdc-reference.cu  fpdc.hpp
src/hip_common/: CMakeLists.txt  blocking_kernel.hip  hip-utils.hip  hip-utils.hpp
src/include/: Kernel.hpp  Kernel.tpp  KernelStats.hpp  Manager.hpp  Types.hpp  gpu-utils.hpp  main.hpp  version.hpp
