cmake_minimum_required(VERSION 3.15)

project(gpubuggy LANGUAGES CXX)
##TODO setup Debug & Release
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3 -g")
include(CheckLanguage)
check_language(CUDA)
if(CMAKE_CUDA_COMPILER)
    message(STATUS "Using CUDA toolkit: ${CMAKE_CUDA_COMPILER}")
    set(BUILD_WITH_CUDA TRUE)
    set(BUILD_WITH_HIP FALSE)
    enable_language(CUDA)
    ##TODO setup Debug & Release
    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --generate-line-info")
else()
    check_language(HIP)
    if(CMAKE_HIP_COMPILER)
        set(BUILD_WITH_HIP TRUE)
        set(BUILD_WITH_CUDA FALSE)
        enable_language(HIP)
        message(STATUS "Building with HIP")
    else()
        message(FATAL_ERROR "CUDA and HIP not found, can't compile")
    endif()
endif()
add_subdirectory(fpc)
add_executable(gpubuggy main.cpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(gpubuggy PUBLIC fpc)